--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p id="description"></p>
             </div>
             <div id="filtry">
-                <button onclick="filtry()" id="filtry-button">Filtry</button>
+                <button onclick="filtry()" class="btn btn-danger" id="filtry-button">Filtry</button>
             </div>
             <hr>
         </section>
