navbar, scroll button

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </form>
         </section>
     </div>
+    <button onclick="topFunction()" id="top-page" title="Go to top"><div class="arrow-5"></div></button>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="script.js"></script>
