--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/LogoUR.svg.ico">
     <script src="https://kit.fontawesome.com/5babc094a0.js" crossorigin="anonymous"></script>
+
 </head>
 <body id="top">
     <div class="container">
@@ -20,7 +21,7 @@
             </ul>
         </div>
         <section id="searching">
-            <h1>Wyszukaj film w serwisie&nbsp;<b>YouTube <i class="fa-brands fa-youtube"></i></b></h1>
+            <h1>Wyszukaj film w serwisie&nbsp;<b>YouTube <i class="fa-brands fa-youtube fa-shake" style="--fa-animation-duration: 3s;"></i></b></h1>
             <div class="search">
                 <form id="form">
                     <div id="search-bar">
@@ -65,11 +66,19 @@
                 <input type="mail" class="form-control" placeholder="Adres email" name="mail" id="mail">
                 <textarea class="form-control" rows="3" placeholder="Treść wiadomości"></textarea>
                 <input type="file" name="file" id="file" class="btn btn-danger">
+                <input type="submit" id="submit" name="submit" class="btn btn-danger">
             </form>
         </div>
     </div>
+    <footer>
+        <img src="/images/LogoUR.svg.ico" alt="urz">
+        <p>Adam Kowalski</p>
+        <p>email@gmail.com</p>
+        <p>github.com/404ptk</p>
+        <p>+48 600 900 500</p>
+    </footer>
     <button onclick="topFunction()" id="top-page" title="Go to top"><div class="arrow"></div></button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="script.js"></script>
 </html>
