--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <footer>
-        <img src="/images/LogoUR.svg.ico" alt="urz">
+        <img src="images/LogoUR.svg.ico" alt="urz">
         <p>Adam Kowalski</p>
         <p>email@gmail.com</p>
         <p>github.com/404ptk</p>
