--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Wyszukiwarka Filmów</title>
+    <meta name="description" content="Wyszukiwarka filmów Youtube.">
+    <meta name="author" content="Patryk J">
+    <meta name="keywords" content="Youtube, Wyszukiwarka, HTML, CSS, JavaScript, URZ">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/LogoUR.svg.ico">
@@ -32,7 +35,7 @@
                     <div id="filters">
                         <label for="upload-range" class="form-label">Data publikacji</label>
                         <p>(Powstałe przed tą datą)</p>
-                        <input type="date" id="upload-range" name="upload-range" value="2024-01-06" min="2018-01-01" max="2024-01-06">
+                        <input type="date" id="upload-range" name="upload-range" value="2024-01-21" min="2018-01-01" max="2024-01-21">
 
                         <label for="max-results" class="form-label">Ilość wyników</label>
                         <input type="range" class="form-range" id="max-results" value="6" min="1" max="11" step="1" oninput="this.nextElementSibling.value = this.value">
@@ -57,28 +60,29 @@
                 </div>
             </div>
         </section>
-        <section id="zgloszenie">
-
-        </section>
         <div id="slidein" class="hide" name="contact_swipe">
-            <form action="" id="kontakt">
+            <form action="#" method="GET" id="kontakt">
                 <h1>Formularz kontaktowy</h1>
-                <input type="text" class="form-control" placeholder="Imię" id="name" name="name">
+                <input type="text" class="form-control" placeholder="Imię" id="name" name="name" autofocus>
                 <input type="text" class="form-control" placeholder="Nazwisko" id="surname" name="surname">
                 <input type="mail" class="form-control" placeholder="Adres email" name="mail" id="mail">
-                <textarea class="form-control" rows="3" placeholder="Treść wiadomości"></textarea>
+                <textarea class="form-control" rows="3" placeholder="Treść wiadomości" name="text-message" id="text-message"></textarea>
                 <input type="file" name="file" id="file" class="btn btn-danger">
                 <input type="radio" checked disabled id="agree" name="agree"> <b>Zezwól na kontakt</b><br>
-                <input type="submit" id="submit" name="submit" class="btn btn-danger">
+                <button onclick="updateValue()" type="button" id="submit" name="submit" class="btn btn-danger">Wyślij</button>
             </form>
         </div>
     </div>
     <footer hidden>
         <img src="images/LogoUR.svg.ico" alt="urz">
-        <p>Adam Kowalski</p>
-        <p>email@gmail.com</p>
-        <p>github.com/404ptk</p>
-        <p>+48 600 900 500</p>
+        <div class="footer-1">
+            <p>Adam Kowalski</p>
+            <p><i>email@gmail.com</i></p>
+        </div>
+        <div class="footer-2">
+            <p>github.com/404ptk</p>
+            <p><i>+48 600 900 500</i></p>
+        </div>
     </footer>
     <button hidden onclick="topFunction()" id="top-page" title="Go to top"><div class="arrow"></div></button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
