--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body id="top">
     <i id="loading" class="fa-solid fa-spinner fa-spin fa-2xl"></i>
+    <div id="loading-indicator"></div>
     <div class="container" hidden>
         <div class="navbar">
             <ul>
@@ -29,7 +30,7 @@
             <div class="search">
                 <form id="form">
                     <div id="search-bar">
-                        <input type="text" class="form-control" id="search" placeholder="Podaj tytuł filmu">
+                        <input type="text" class="form-control" id="search">
                         <input type="submit" class="btn btn-danger" value="🔎" id="search_icon">
                     </div>
                     <div id="filters">
