--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Wyszukiwarka Filmów</title>
     <meta name="description" content="Wyszukiwarka filmów Youtube.">
+    <meta property="og:image" content="images/description.jpg">
     <meta name="author" content="Patryk J">
     <meta name="keywords" content="Youtube, Wyszukiwarka, HTML, CSS, JavaScript, URZ">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
