--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>
         <div id="slidein" class="hide" name="contact_swipe">
             <form action="#" method="GET" id="kontakt">
-                <h1>Formularz kontaktowy</h1>
+                <h2>Formularz kontaktowy</h2>
                 <input type="text" class="form-control" placeholder="Imię" id="name" name="name" autofocus>
                 <input type="text" class="form-control" placeholder="Nazwisko" id="surname" name="surname">
                 <input type="mail" class="form-control" placeholder="Adres email" name="mail" id="mail">
@@ -86,7 +86,7 @@
             <p><i>+48 600 900 500</i></p>
         </div>
     </footer>
-    <button hidden onclick="topFunction()" id="top-page" title="Go to top"><div class="arrow"></div></button>
+    <button onclick="topFunction()" id="top-page" title="Go to top"><div class="arrow"></div></button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
