--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <img src="images/150.png" alt="additionalbackground-bottom" id="additionalbackground-bottom">
     </footer>
-    <button onclick="topFunction()" id="top-page" title="Go to top">
+    <button onclick="topFunction()" id="top-page" title="Top">
         <div class="arrow"></div>
     </button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
